Created dynamic library for mythread

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "malloc.h": "c",
-        "fcntl.h": "c"
+        "fcntl.h": "c",
+        "errno.h": "c"
     }
 }
